show the post details when clicking through on the list

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,6 @@
 <resources>
     <dimen name="defaultPadding">16dp</dimen>
     <dimen name="paddingSmall">8dp</dimen>
+
+    <dimen name="textLarge">22sp</dimen>
 </resources>
